# nice-engine

./: .gitignore  Cargo.toml  LICENSE.md  README.md
capi/: Cargo.toml
capi/src/: game_graph.rs  game_graph_driver.rs  lib.rs  render_engine.rs
capi/src/render_engine/: camera.rs  font_data.rs  image_data.rs  mesh_batch.rs  mesh_data.rs  mesh_group.rs  mesh_instance.rs  window.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
src/: camera.rs  device.rs  direct_light.rs  lib.rs  mesh.rs  mesh_batch.rs  mesh_data.rs  mesh_group.rs  pipelines.rs  resources.rs  surface.rs  texture.rs  threads.rs  transform.rs  window.rs  world.rs
src/codecs/: model.rs
src/pipelines/: deferred.rs  forward.rs
src/pipelines/deferred/: context.rs  pipeline.rs
src/pipelines/forward/: context.rs  pipeline.rs
src/pipelines/shaders/: geom.glslf  geom.glslv  light.glslf  light.glslv  swap.glslf  swap.glslv  util.glsl
src/resources/: model.rs  texture.rs
src/texture/: immutable.rs  target.rs
src/texture/immutable/: mipmaps_command_buffer.rs
