[package]
name = "nice-engine"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

[workspace]
members = ["capi", "examples/sandbox"]

[dependencies]
array-init = "0.1.0"
atom = "0.3.5"
byteorder = "1.3.2"
cgmath = "0.17.0"
futures-preview = "=0.3.0-alpha.18"
image = "0.22.1"
lazy_static = "1.3.0"
log = "0.4.7"
maplit = "1.0.1"
vulkano = "0.16.0"
vulkano-shaders = "0.13.0"
vulkano-win = { version = "0.16.0", optional = true }
winit = { version = "0.19.5", optional = true }

[features]
default = ["window"]
window = ["vulkano-win", "winit"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
