[package]
name = "nice-engine-capi"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.17.0"
half = "1.3.0"
libc = "0.2"
nice-engine = { path = "../", default-features = false }
vulkano = { git = "https://github.com/IcyDefiance/vulkano.git" }
