[package]
name = "nice-engine-capi"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.17.0"
half = "1.3.0"
libc = "0.2"
log = "0.4.7"
nice-engine = { path = "../", default-features = false }
simplelog = "0.5"
vulkano = { git = "https://github.com/nice-game/vulkano.git", branch = "master-new" }
