[package]
name = "nice-engine-capi"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.1.0"
cgmath = "0.17.0"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
half = "1.4.0"
libc = "0.2"
log = "0.4.7"
nice-engine = { path = "../", default-features = false }
simplelog = "0.5"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
