[package]
name = "sandbox"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
nice-engine = { path = "../.." }
simplelog = "0.5"
vulkano = { git = "https://github.com/IcyDefiance/vulkano.git" }
winit = "0.19.1"

[profile.release]
lto = true
